# mini-ai-agent

./: .env.example  .gitignore  ingestion.py  main.py  pyproject.toml
backend/: core.py
